--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:sCM62lQOZbM4+hg5vH6vw2VazHhkTgw7z/s/ePKQamI=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=database
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=todolist
 DB_USERNAME=root
 DB_PASSWORD=
 
